Added constructor and fakes

--- a/TestDoorControl/TestDoorControl.csproj
+++ b/TestDoorControl/TestDoorControl.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DoorControlExercise\DoorControlExercise.csproj" />
+    <ProjectReference Include="..\FakeDoorControl\FakeDoorControl.csproj" />
   </ItemGroup>
 
 </Project>
