--- a/FakeDoorControl/FakeDoorControl.csproj
+++ b/FakeDoorControl/FakeDoorControl.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NSubstitute" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DoorControlExercise\DoorControlExercise.csproj" />
   </ItemGroup>
 
